--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <link rel="stylesheet"  type="text/css" href="css/style.css">
     </head>
         <body>
-          <button type="button" class="btn btn-primary">Primary</button>
+            <nav class="navbar navbar-expand-lg navbar-light">
+              <a class="navbar-brand" href="#">
+                <img src="img/DIO.jpg">
+              </a>
+                <div class="collapse navbar-collapse">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Quem somos</a>
+                    </li>
+                  </ul>
+            </div>
+          </nav>
         </body>
 </html>
