adicionado style.css, adicionado aba quem somos e parceiros

--- a/index.html
+++ b/index.html
@@ -9,15 +9,49 @@
         <body>
             <nav class="navbar navbar-expand-lg navbar-light">
               <a class="navbar-brand" href="#">
-                <img src="img/DIO.jpg">
+                <img src="img/DIO.png" width="200">
               </a>
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Quem somos</a>
+                      <a class="nav-link" href="#quemsomos">Quem somos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#parceiros">Parceiros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Serviços</a>
                     </li>
                   </ul>
             </div>
           </nav>
+          <section id="quemsomos">
+            <div class="container-fluid quemsomos1 text-center margin">
+              <h3 class="margin">Quem Somos</h3>
+              <img src="img/Equipe.jpg" class="rounded-circle" width="300" height="300">
+              <h5 class="margin">Nossos são pães são diferenciados, pois utilizamos as melhores matérias-primas, como trigo de excelente qualidade e água mineral.
+                Nossa equipe, incluindo os padeiros, são especialistas em receitas que foram desenvolvidas e aprimoradas pela nossa padaria ao longo de mais de 60 anos de história.</h5>
+            </div>
+          </section>
+          <section id="parceiros">
+            <div class="container-fluid text-center margin">
+              <h3 class="margin">Parceiros</h3>
+              <div class="row">
+
+                <div class="col-lg-4">
+                  <img src="img/code.jpg" width="200" height="200" class="rounded-circle">
+                </div>
+
+                <div class="col-lg-4">
+                  <img src="img/app.jpg" width="200" height="200" class="rounded-circle">
+                </div>
+
+                <div class="col-lg-4">
+                  <img src="img/Webpage.jpg" width="200" height="200" class="rounded-circle">
+                </div>
+
+              </div>
+            </div>
+          </section>
         </body>
 </html>
