--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" >
         <link rel="stylesheet"  type="text/css" href="css/style.css">
     </head>
+
         <body>
+
             <nav class="navbar navbar-expand-lg navbar-light">
               <a class="navbar-brand" href="#">
                 <img src="img/DIO.png" width="200">
@@ -20,11 +22,12 @@
                       <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Serviços</a>
+                      <a class="nav-link" href="#servicos">Serviços</a>
                     </li>
                   </ul>
             </div>
           </nav>
+
           <section id="quemsomos">
             <div class="container-fluid quemsomos1 text-center margin">
               <h3 class="margin">Quem Somos</h3>
@@ -33,6 +36,7 @@
                 Nossa equipe, incluindo os padeiros, são especialistas em receitas que foram desenvolvidas e aprimoradas pela nossa padaria ao longo de mais de 60 anos de história.</h5>
             </div>
           </section>
+
           <section id="parceiros">
             <div class="container-fluid text-center margin">
               <h3 class="margin">Parceiros</h3>
@@ -49,9 +53,27 @@
                 <div class="col-lg-4">
                   <img src="img/Webpage.jpg" width="200" height="200" class="rounded-circle">
                 </div>
-
               </div>
             </div>
           </section>
+          
+          <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+              <h3 class="margin"> Serviços </h3>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <h5 class="margin"> Nos produzimos os aplicativos de qualidade superior ao dos nossos concorrentes</h5>                    <img src="img/app.jpg" width="100%">
+                  </div>
+                  <div class="col-lg-6">
+                    <h5 class="margin"> Também produzimos websites responsivos de acordo com as necessidades de cada cliente</h5>
+                    <img src="img/Webpage.jpg" width="100%">
+                  </div>
+                </div>
+            </div>
+          </section>
+
+          <footer class="text-center">
+            <p>Desenvolvido por Eduardo Ferreira @basiern</p>
+          </footer>
         </body>
 </html>
